<resources>
    <string name="app_name">PoolRide</string>

    <string name="edit_account_button">Edit</string>
    <string name="view_account_button">View</string>
    <string name="request_ride_button">Request Ride</string>
    <string name="submit_registration_button">Submit</string>

    <string name="home_page">Home</string>
    <string name="edit_account_page">Edit Account</string>
    <string name="registration_page">Registration</string>
    <string name="search_rides">Search</string>
    <string name="select_car">Select</string>
    <string name="cancel">Cancel</string>
    <string name="view_map">Map</string>
    <string name="view_ride_details">Ride Details</string>
    <string name="schedule_ride">Schedule Ride</string>
    <string name="schedule_submit">Schedule</string>
    <string name="login_username">Username:</string>
    <string name="login_password">Password:</string>
    <string name="registration_username">Username:</string>
    <string name="registration_password">Password:</string>
    <string name="registration_email">Email:</string>
    <string name="registration_phone">Phone:</string>
    <string name="registration_first_name">First Name:</string>
    <string name="registration_last_name">Last Name:</string>
    <string name="registerEmailHint">e.g. name@example.com</string>
    <string name="registerPhoneHint">e.g. 6471640543</string>
    <string name="registerFirstNameHint">e.g. John</string>
    <string name="registerLastNameHint">e.g. Smith</string>
</resources>